--- a/Lesson_01_Climatology_and_Anomaly.ipynb
+++ b/Lesson_01_Climatology_and_Anomaly.ipynb
@@ -13,6 +13,9 @@
     "import matplotlib.pyplot as plt\n",
     "import cartopy.crs as ccrs\n",
     "import pandas as pd\n",
+    "import fiona as fi\n",
+    "import shapely as shp\n",
+    "import pyproj as pyproj\n",
     "\n",
     "#define the file you will investigate\n",
     "tfile1='/work/Veeshan.Narinesingh/INTERNS_2024/ERA5/TEMPERATURE/ERA5_temperature.model_level_137.daily.2019.nc'\n",
