--- a/Lesson_01_Climatology_and_Anomaly.ipynb
+++ b/Lesson_01_Climatology_and_Anomaly.ipynb
@@ -22,7 +22,7 @@
 
     "\n",
     "#define the file you will investigate\n",
-    "tfile1='/work/Veeshan.Narinesingh/INTERNS_2024/ERA5/TEMPERATURE/ERA5_2deg_temperature.model_level_137.daily.2019.nc'\n",
+    "tfile1='ERA5_2deg_temperature.model_level_137.daily.2019.nc'\n",
     "\n",
     "#load in the dataset using xarray\n",
     "tds=xr.open_dataset(tfile1)\n"
@@ -649,7 +649,7 @@
     "cbar.set_label('Temperature (°F)', fontsize=16)\n",
     "\n",
     "# Add a title to the plot\n",
-    "plt.title('Near Surface Temperature July 15, 2019')\n",
+    "plt.title('Near Surface Temperature August 25, 2019')\n",
     "\n",
     "# Show the plot\n",
     "plt.show()\n"
