--- a/Lesson_01_Climatology_and_Anomaly.ipynb
+++ b/Lesson_01_Climatology_and_Anomaly.ipynb
@@ -827,7 +827,7 @@
     "# The next thing we want to calculate is the anomaly. The anomaly is the deviation from the average, or in other words the difference from the climatology\n",
     "\n",
     "#let's calculate the temperature anomaly on August 25th, using the \"climatology\" (or average) calculated for JJA\n",
-    "tanomjul15=tjul15-tmeanjja\n",
+    "tanomaug25=taug25-tmeanjja\n",
     "\n",
     "# Set the color axis limits\n",
     "color_min = -20\n",
@@ -844,7 +844,7 @@
     "axs = fig.add_subplot(1, 1, 1, projection=ccrs.PlateCarree(central_longitude=0))\n",
     "\n",
     "# Plot a filled contour of tnow with specified color axis limits\n",
-    "contour_plot1 = axs.contourf(lon, lat, tanomjul15, levels=colorlevels, vmin=color_min, vmax=color_max,cmap='bwr', extend=\"both\")\n",
+    "contour_plot1 = axs.contourf(lon, lat, tanomaug25, levels=colorlevels, vmin=color_min, vmax=color_max,cmap='bwr', extend=\"both\")\n",
     "\n",
     "# Add coastlines to the plot\n",
     "axs.coastlines(resolution='110m')\n",
@@ -855,7 +855,7 @@
     "cbar.set_label('Temperature (°F)', fontsize=16)\n",
     "\n",
     "# Add a title to the plot\n",
-    "plt.title('Near Surface Temperature Jul 15, 2019')\n",
+    "plt.title('Near Surface Temperature Anomaly Aug 25, 2019')\n",
     "\n",
     "# Show the plot\n",
     "plt.show()"
