updates Lesson 1 and data directory

--- a/Lesson_01_Climatology_and_Anomaly.ipynb
+++ b/Lesson_01_Climatology_and_Anomaly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "13803d72-c2ce-4b55-85fe-dc289652c704",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
     "\n",
     "\n",
     "#define the file you will investigate\n",
-    "tfile1='/work/Veeshan.Narinesingh/INTERNS_2024/ERA5/TEMPERATURE/ERA5_temperature.model_level_137.daily.2019.nc'\n",
+    "tfile1='DATA/ERA5_2deg_temperature.model_level_137.daily.2019.nc'\n",
     "\n",
     "#load in the dataset using xarray\n",
     "tds=xr.open_dataset(tfile1)\n"
