--- a/Lesson_03-01_Compositing_to_understand_dynamics_ERA5.ipynb
+++ b/Lesson_03-01_Compositing_to_understand_dynamics_ERA5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ab24bed8-bc52-4c3a-b578-1c95e9345d4c",
    "metadata": {},
    "outputs": [],
@@ -32,14 +32,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e8c1e91d-ad49-43ce-acab-899aac3f9642",
    "metadata": {},
    "outputs": [],
    "source": [
     "# load in the temperature too \n",
-    "tdir = '/work/Veeshan.Narinesingh/INTERNS_2024/ERA5/TEMPERATURE/'\n",
-    "tfileprefix = 'ERA5_temperature.model_level_137.daily.'\n",
+    "tdir = 'DATA/'\n",
+    "tfileprefix = 'ERA5_2deg_temperature.model_level_137.daily.'\n",
     "ny1=1979 # specify the first year of the data files\n",
     "ny2=2019 # specify the last year of the data files\n",
     "\n",
@@ -71,25 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0102797b-1860-48bf-a3a8-f7678599147e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 6>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m var1smooth5np\u001b[38;5;241m=\u001b[39mvar1smooth5\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mreshape((nyrs,\u001b[38;5;241m365\u001b[39m,np\u001b[38;5;241m.\u001b[39msize(lat),np\u001b[38;5;241m.\u001b[39msize(lon)))\n\u001b[1;32m      5\u001b[0m var1smooth5rs\u001b[38;5;241m=\u001b[39m xr\u001b[38;5;241m.\u001b[39mDataArray(data\u001b[38;5;241m=\u001b[39mvar1smooth5np,dims\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myear\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mday\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlat\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlon\u001b[39m\u001b[38;5;124m\"\u001b[39m],coords\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mdict\u001b[39m(year\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marange(ny1,ny2\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m),day\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39marange(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m366\u001b[39m,\u001b[38;5;241m1\u001b[39m)))\n\u001b[0;32m----> 6\u001b[0m var1smooth5rs15day1\u001b[38;5;241m=\u001b[39m\u001b[43mvar1smooth5rs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrolling\u001b[49m\u001b[43m(\u001b[49m\u001b[43mday\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m15\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mcenter\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43mmin_periods\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmean\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;66;03m#1st 15 day running mean \u001b[39;00m\n\u001b[1;32m      7\u001b[0m var1smooth5rs15day2\u001b[38;5;241m=\u001b[39mvar1smooth5rs15day1\u001b[38;5;241m.\u001b[39mrolling(day\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m15\u001b[39m,center\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,min_periods\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;66;03m#2nd 15 day running mean\u001b[39;00m\n\u001b[1;32m      8\u001b[0m clim\u001b[38;5;241m=\u001b[39mvar1smooth5rs15day2\u001b[38;5;241m.\u001b[39mrolling(year\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m11\u001b[39m,center\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,min_periods\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;66;03m#29 day by 11 year climatology\u001b[39;00m\n",
-      "File \u001b[0;32m/app/conda/miniconda/envs/python-3.9-20220720/lib/python3.9/site-packages/xarray/core/rolling.py:147\u001b[0m, in \u001b[0;36mRolling._reduce_method.<locals>.method\u001b[0;34m(self, keep_attrs, **kwargs)\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmethod\u001b[39m(\u001b[38;5;28mself\u001b[39m, keep_attrs\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m    145\u001b[0m     keep_attrs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_keep_attrs(keep_attrs)\n\u001b[0;32m--> 147\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_numpy_or_bottleneck_reduce\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    148\u001b[0m \u001b[43m        \u001b[49m\u001b[43marray_agg_func\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    149\u001b[0m \u001b[43m        \u001b[49m\u001b[43mbottleneck_move_func\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    150\u001b[0m \u001b[43m        \u001b[49m\u001b[43mrolling_agg_func\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    151\u001b[0m \u001b[43m        \u001b[49m\u001b[43mkeep_attrs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkeep_attrs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    152\u001b[0m \u001b[43m        \u001b[49m\u001b[43mfillna\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfillna\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    153\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    154\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/app/conda/miniconda/envs/python-3.9-20220720/lib/python3.9/site-packages/xarray/core/rolling.py:570\u001b[0m, in \u001b[0;36mDataArrayRolling._numpy_or_bottleneck_reduce\u001b[0;34m(self, array_agg_func, bottleneck_move_func, rolling_agg_func, keep_attrs, fillna, **kwargs)\u001b[0m\n\u001b[1;32m    559\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdim\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    561\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m    562\u001b[0m     OPTIONS[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124muse_bottleneck\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m    563\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m bottleneck_move_func \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    568\u001b[0m     \u001b[38;5;66;03m# underlying https://github.com/pydata/xarray/issues/2940 are\u001b[39;00m\n\u001b[1;32m    569\u001b[0m     \u001b[38;5;66;03m# fixed.\u001b[39;00m\n\u001b[0;32m--> 570\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_bottleneck_reduce\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    571\u001b[0m \u001b[43m        \u001b[49m\u001b[43mbottleneck_move_func\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkeep_attrs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkeep_attrs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[1;32m    572\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    573\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m rolling_agg_func:\n\u001b[1;32m    574\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m rolling_agg_func(\u001b[38;5;28mself\u001b[39m, keep_attrs\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_keep_attrs(keep_attrs))\n",
-      "File \u001b[0;32m/app/conda/miniconda/envs/python-3.9-20220720/lib/python3.9/site-packages/xarray/core/rolling.py:531\u001b[0m, in \u001b[0;36mDataArrayRolling._bottleneck_reduce\u001b[0;34m(self, func, keep_attrs, **kwargs)\u001b[0m\n\u001b[1;32m    529\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshould not be reachable\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    530\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 531\u001b[0m     values \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    532\u001b[0m \u001b[43m        \u001b[49m\u001b[43mpadded\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwindow\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwindow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmin_count\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmin_count\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43maxis\u001b[49m\n\u001b[1;32m    533\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    535\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcenter[\u001b[38;5;241m0\u001b[39m]:\n\u001b[1;32m    536\u001b[0m     values \u001b[38;5;241m=\u001b[39m values[valid]\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# let's also calculate the temperature anomaly\n",
     "\n",
@@ -310,14 +295,14 @@
     "# Next, let's take a look at how the 500 hPa geopotential height anomaly evolves during these events\n",
     "\n",
     "# First load in the data\n",
-    "directoryz = '/work/Veeshan.Narinesingh/ERA5/GEOPOTENTIAL_HEIGHT/DAILY/1P25RES/'\n",
+    "directoryz = 'DATA/'\n",
     "\n",
     "\n",
     "c1 = 0\n",
     "c2 = 365\n",
     "\n",
     "for yr in range(ny1,ny2 + 1):\n",
-    "    filenamez = 'era5.z500.daily.1P25res.' + str(yr) + '.nc'\n",
+    "    filenamez = 'era5.z500.daily.2deg.' + str(yr) + '.nc'\n",
     "    ds = xr.open_dataset(directoryz + filenamez)\n",
     "    if yr == ny1:\n",
     "        zlat = ds.lat\n",
